# so-ops

./: .gitattributes  .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
scripts/: deploy.sh  migrate_state.sh
src/so_ops/: __init__.py  cli.py  config.py  init.py  log.py  state.py
src/so_ops/clients/: elasticsearch.py  notify.py  ollama.py
src/so_ops/tools/: health.py  triage.py  vulnscan.py
systemd/: so-health.service  so-health.timer  so-triage.service  so-triage.timer  so-vulnscan-nmap.service  so-vulnscan-nmap.timer  so-vulnscan-nuclei.service  so-vulnscan-nuclei.timer
tests/: conftest.py  test_config.py  test_triage_logic.py
